--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <!-- your code here! See README.md for deliverables -->
 <video> 
 <source src="https://curriculum-content.s3.amazonaws.com/skills-front-end-web-development/real-estate-lab-assets/real-estate.mp4"> 
-<source src=""
+<source src="https://curriculum-content.s3.amazonaws.com/skills-front-end-web-development/real-estate-lab-assets/real-estate.ogg">
+controls
+autoplay 
+width="600px" 
 
 </video>
   </body>
