--- a/index.html
+++ b/index.html
@@ -11,12 +11,10 @@
     <h2>Realty Group</h2>
 
     <!-- your code here! See README.md for deliverables -->
-<video> 
+<video controls autoplay width="600px" > 
 <source src="https://curriculum-content.s3.amazonaws.com/skills-front-end-web-development/real-estate-lab-assets/real-estate.mp4"> 
 <source src="https://curriculum-content.s3.amazonaws.com/skills-front-end-web-development/real-estate-lab-assets/real-estate.ogg">
-controls
-autoplay 
-width="600px" 
+
 
 </video>
   </body>
